create github pages

--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>Page 1</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/Material-Design-Icons/css/material.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
 </head>
 <body>
   
-  <section data-bs-version="5.1" class="menu menu3 cid-utESfjooZ3" once="menu" id="menu03-0">
+  <section data-bs-version="5.1" class="menu menu3 cid-utHNw318k7" once="menu" id="menu03-9">
 	
 
 	<nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -70,7 +70,7 @@
 	</nav>
 </section>
 
-<section data-bs-version="5.1" class="article07 cid-utETww5l9H" id="article07-1">
+<section data-bs-version="5.1" class="article07 cid-utHNw4sVaT" id="article07-a">
   
 
   
@@ -79,7 +79,7 @@
     <div class="row justify-content-center">
       <div class="card col-md-12 col-lg-10">
         <div class="card-wrapper">
-          <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-2"><strong>Панель управления</strong></h3>
+          <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-2"><strong>bydvs.ru</strong></h3>
           <div class="row card-box align-left">
             <div class="item features-without-image col-12">
               <div class="item-wrapper">
@@ -114,7 +114,7 @@
   </div>
 </section>
 
-<div class="modal mbr-popup cid-utEUuzzDLo fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-2" aria-hidden="true">
+<div class="modal mbr-popup cid-utHNw4Y8MB fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-2" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="container position-static margin-center-pos">
@@ -138,14 +138,14 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AtTVo8LkMynlGbSmj2cdxiZdFC6SeqBv0hljo+QffWXacPq8yJi+WicUJ0G5LNKX4nF3Z3r1Lixbxc/IKZ5X5NOhvAe5AaJmcVYte7SxCp5ZlqAUIgu1IT4B753VSuOz.GP+HLp8s7NYi+j967y3CUd9DUsPnyX1oqnzRDZvK44vQ7roqeGreJ9FwTMbf5sNmJq5ygWGv2EDlZ3SDYsrG4k+gSauk6gWO65hBHrXo8CdMFZhaJqoveDxEc/2XSghY">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e0vJO7FDEZxxAAU3Rk6usmWc2r+d1k9XJnGpM3r23rYvODE6UcS6XEXpX9lnr9/Df0ybjJNldRsRl596ljIRY6g3oZugM+bIXjhl7VxT4eGhFTbKzdRUnQuE/W5XJF55.3fNuf4c6BBSWGjJtt/W9QcTX1yxZ5xFJpscVvdCdhDyWwRLnB0tskPppqV1y3hHROqbt3N8tmKU2Cn8wl1D/vCI9yM9h4Al9y4s4lpGZl+FfLOpTWHc73jvbHjKeWrFv">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Спасибо за обращение. В ближайшее время с вами свяжемся.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
 </div>
 <div class="dragArea row">
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="Сообщение">
-<textarea name="Сообщение" placeholder="Сообщение" data-form-field="Сообщение" class="form-control display-7" id="Сообщение-mbr-popup-2"></textarea>
+<textarea name="Сообщение" placeholder="Сообщение" data-form-field="Сообщение" class="form-control display-7" id="Сообщение-mbr-popup-b"></textarea>
 </div>
 <div class="col-md-auto input-group-btn"><button type="submit" class="w-100 btn btn-danger display-4">ОТПРАВИТЬ</button></div>
 </div>
@@ -160,7 +160,7 @@
         </div>
     </div>
 
-<div class="modal mbr-popup cid-utEUYf5qj3 fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-3" aria-hidden="true">
+<div class="modal mbr-popup cid-utHNw5wJpJ fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-3" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="container position-static margin-center-pos">
@@ -184,17 +184,17 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0kZBO00EThjfLZNNy79fjSo+TFsibEYD9QN4oG7Ksxu2K/k7IXH9lODKNmp0mVZ0E/7lb7wS+bndvxyTT5G9PTiQBaBzfQWs7QWBYNI3fA8de2S41j7Gixzbkt4g9GCo.CX/R2oRdg2igYG+QqDrKeYDti4udiuGxPZGamiDC7dv3eeP7nUTIQSZvpIcwOPf+pj2zabBtoMNEBnmusz4uiT/aekZa4q9fjPGhdWKiV8xGiqTmuzmhK8/0Si727s7y">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="we1Ub9rnGs3H2xUeY1fp9wcWzXC1dsxVp6bzNznDQPQMKWyJac0ggXB1hRtrRRA+uvXVSRWWB44IZGikKEs9yeEVZOv6kPvnoa/xEmBcGKfPLnA5Ok+wijGD47XGlOYF.Sn1szDgCuDb7DRMj7bJntC5E9l4pTWvc5BeI1CNZDSXJXDB9oWC91jJLHRwrUkHKOsBtiyP4oCLkon2bIdu4InXYjVXROK8EfZJSHyjTGOu95jvZ4YNyDL/Qm0vhJ635">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Принято. Мы проверим ваш заказ и вышлем ссылку на оплату на E-mail.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
 </div>
 <div class="dragArea row">
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="Адрес сайта">
-<input type="text" name="Адрес сайта" placeholder="Адрес сайта" data-form-field="Адрес сайта" class="form-control display-7" value="" id="Адрес сайта-mbr-popup-3">
+<input type="text" name="Адрес сайта" placeholder="Адрес сайта" data-form-field="Адрес сайта" class="form-control display-7" value="" id="Адрес сайта-mbr-popup-c">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="E-mail">
-<input type="text" name="E-mail" placeholder="E-mail" data-form-field="E-mail" class="form-control display-7" value="" id="E-mail-mbr-popup-3">
+<input type="text" name="E-mail" placeholder="E-mail" data-form-field="E-mail" class="form-control display-7" value="" id="E-mail-mbr-popup-c">
 </div>
 <div class="col-md-auto input-group-btn"><button type="submit" class="w-100 btn btn-danger display-4">ЗАПРОСИТЬ ССЫЛКУ</button></div>
 </div>
